main/default/objects/IncentiveCreditText__c/IncentiveCreditText__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>IncentiveCreditText</label>
</CustomObject>