main/default/objects/IncentiveCreditText__c/fields/Credit_Months__c.field-meta.xml
<CustomField>
    <fullName>Credit_Months__c</fullName>
    <label>Credit Months</label>
    <length>50</length>
    <type>Text</type>
</CustomField>