main/default/objects/IncentiveCreditText__c/fields/Credit_Text__c.field-meta.xml
<CustomField>
    <fullName>Credit_Text__c</fullName>
    <label>Credit Text</label>
    <type>TextArea</type>
</CustomField>