main/default/objects/IncentiveCreditText__c/fields/Number_of_Months__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Months__c</fullName>
    <label>Number of Months</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>